simpler aop config, add headless switch